--- a/contact me.html
+++ b/contact me.html
@@ -5,9 +5,16 @@
     <title>CONTACT ME</title>
   </head>
   <body>
-    <ul>
-      <li>jhjfgj@gmail.com</li>
-      <li>8075656-5675</li>
-    </ul>
+    <h1>MY CONTACT DETAILS</h1>
+    <p>MY FICTIAL ADDRESS</p>
+    <p>MY FICTIAL NUMBER</p>
+    <p>MY FICTIAL EMAIL</p>
+    <hr>
+    <form  action="mailto:info@londonasd.com" method="post" enctype="text/plain">
+      <label >your name: </label><input type="text" name="your name: " value=""><br>
+      <label>your email</label><input type="email" name="your email " value=""><br>
+      <label>your message</label><br><textarea name="your messsage" rows="10" cols="30"></textarea><br>
+      <input type="submit" name="">
+    </form>
   </body>
 </html>
