--- a/my hobbies.html
+++ b/my hobbies.html
@@ -7,9 +7,9 @@
   <body>
     <h3>HOBBYS</h3>
     <ol>
-      <li>play bajp</li>
-      <li>play football</li>
-      <li>do excersice</li>
+      <a href="https://es.wikipedia.org/wiki/Bajo_el%C3%A9ctrico">PLAY BAJP</a>
+      <br>
+      <a href="https://en.wikipedia.org/wiki/Football">PLAY FOOTBALL</a>
     </ol>
   </body>
 </html>
