--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/FPCRICLE.PNG" alt="JESUS LINARES"></td>
+      <td><img src="images/FPCRICLE.png" alt="JESUS LINARES"></td>
       <td><h1><em>JESUS LINARES</em></h1>
       <p><strong>STUDENT</strong></p>
       <p>LOVE FOOTBAL, SODA</p></td>
