--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/FPCRICLE.png" alt="JESUS LINARES"></td>
+      <td><img src="images/PORTADA.jpeg" alt="JESUS LINARES" width="300" height="300"></td>
       <td><h1><em>JESUS LINARES</em></h1>
       <p><strong>STUDENT</strong></p>
       <p>LOVE FOOTBAL, SODA</p></td>
@@ -18,7 +18,7 @@
 <h3>EDUCATION</h3>
 <ul>
   <li><a href="http://www.colegiobilinguedecerroviento.com/">CBCV</a></li>
-  <li>UDEMY ACADEMY</li>
+  <li><a href="https://www.udemy.com/?deal_code=&utm_source=aff-campaign&utm_medium=udemyads&utm_term=Homepage&utm_content=Textlink&utm_campaign=Admitad-default&admitad_uid=9768ab38f95fbc33e359cae9086c6f3e&publisher_id=1031055&website_id=1105402">UDEMY ACADEMY</a></li>
 </ul>
 <hr>
 <h3>WORK EXPERIENCE</h3>
