--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>JESUS'S PERSONAL SITE</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body>
+<body style="">
   <table cellspacing="20">
     <tr>
       <td><img src="images/PORTADA.jpeg" alt="JESUS LINARES" width="300" height="300"></td>
